sumo/tests/duarouter/alternatives/style1_input/errors/xml/double_attribute/errors.duarouter
Error: The attribute 'probability' is already used in element 'route'
 In file 'input_alts.rou.xml.alt'
 At line/column 10/57.

Quitting (on error).
